--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- CABECERA-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Bienvenido!</div>
+                <div class="masthead-subheading">Bienvenido........!</div>
                 <div class="masthead-heading text-uppercase">Parqueadero Marco Fidel Suarez</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Mas Informacion</a>
             </div>
@@ -93,8 +93,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Nuestros inicios </h3>
+                    <h2 class="section-heading text-uppercase">TARIFAS</h2>
+                    <h3 class="section-subheading text-muted">te ofrecemos los mejores precios</h3>
                 </div>
 
                 <div class="row">
