--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- CABECERA-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Bienvenido........!</div>
+                <div class="masthead-subheading">Bienvenido!</div>
                 <div class="masthead-heading text-uppercase">Parqueadero Marco Fidel Suarez</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Mas Informacion</a>
             </div>
@@ -204,7 +204,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4></h4>
@@ -214,8 +214,9 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/h.jpg" alt="..." /></div>
                         <div class="timeline-panel">
+                            
                             <div class="timeline-heading">
                                 <h4>March 2011</h4>
                                 <h4 class="subheading">An Agency is Born</h4>
