--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!-- comentario -->
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -213,6 +213,8 @@
                             <div class="timeline-body"><p class="text-muted"> los primeros parqueaderos organizados. En 1901, se abrió el primer estacionamiento público automatizado en Boston, Estados Unidos. A partir de entonces, los parqueaderos evolucionaron con estructuras más grandes y tecnologías avanzadas para satisfacer la creciente demanda de estacionamiento en áreas urbanas para nuestra clientela.</p></div>
                         </div>
                     </li>
+
+
                     <li class="timeline-inverted">
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
                         <div class="timeline-panel">
