--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
                         </span>
                         <h4 class="my-3">𝑴𝑶𝑻𝑶𝑺</h4>
                         
-                        <p class="text-muted">¡Bienvenidos! En nuestro establecimiento 
-                            contamos con un servicio de parqueo exclusivo para motos, 
-                            ofreciendo total seguridad para nuestros queridos clientes. 🏍️🔒</p>
+                        <p class="text-muted">¡𝑩𝒊𝒆𝒏𝒗𝒆𝒏𝒊𝒅𝒐𝒔! 𝑬𝒏 𝒏𝒖𝒆𝒔𝒕𝒓𝒐 𝒆𝒔𝒕𝒂𝒃𝒍𝒆𝒄𝒊𝒎𝒊𝒆𝒏𝒕𝒐 𝒄𝒐𝒏𝒕𝒂𝒎𝒐𝒔 𝒄𝒐𝒏 𝒖𝒏 𝒔𝒆𝒓𝒗𝒊𝒄𝒊𝒐 𝒅𝒆 𝒑𝒂𝒓𝒒𝒖𝒆𝒐 𝒆𝒙𝒄𝒍𝒖𝒔𝒊𝒗𝒐 𝒑𝒂𝒓𝒂 𝒎𝒐𝒕𝒐𝒔, 𝒐𝒇𝒓𝒆𝒄𝒊𝒆𝒏𝒅𝒐 𝒕𝒐𝒕𝒂𝒍 𝒔𝒆𝒈𝒖𝒓𝒊𝒅𝒂𝒅 𝒑𝒂𝒓𝒂 𝒏𝒖𝒆𝒔𝒕𝒓𝒐𝒔 𝒒𝒖𝒆𝒓𝒊𝒅𝒐𝒔 𝒄𝒍𝒊𝒆𝒏𝒕𝒆𝒔. 🏍️🔒</p>
 
                     </div>
 
@@ -80,8 +78,7 @@
                             <i class="fas fa-car fa-spin" style="color: #26a269;"></i>
                         </span>
                         <h4 class="my-3">𝑪𝑨𝑹𝑹𝑶𝑺</h4>
-                        <p class="text-muted">¡Bienvenidos! En nuestro establecimiento contamos con un servicio de parqueo
-                             exclusivo para carros, ofreciendo total seguridad para nuestros queridos clientes. 🚗🔒</p>
+                        <p class="text-muted">¡𝑩𝒊𝒆𝒏𝒗𝒆𝒏𝒊𝒅𝒐𝒔! 𝑬𝒏 𝒏𝒖𝒆𝒔𝒕𝒓𝒐 𝒆𝒔𝒕𝒂𝒃𝒍𝒆𝒄𝒊𝒎𝒊𝒆𝒏𝒕𝒐 𝒄𝒐𝒏𝒕𝒂𝒎𝒐𝒔 𝒄𝒐𝒏 𝒖𝒏 𝒔𝒆𝒓𝒗𝒊𝒄𝒊𝒐 𝒅𝒆 𝒑𝒂𝒓𝒒𝒖𝒆𝒐 𝒆𝒙𝒄𝒍𝒖𝒔𝒊𝒗𝒐 𝒑𝒂𝒓𝒂 𝒄𝒂𝒓𝒓𝒐𝒔, 𝒐𝒇𝒓𝒆𝒄𝒊𝒆𝒏𝒅𝒐 𝒕𝒐𝒕𝒂𝒍 𝒔𝒆𝒈𝒖𝒓𝒊𝒅𝒂𝒅 𝒑𝒂𝒓𝒂 𝒏𝒖𝒆𝒔𝒕𝒓𝒐𝒔 𝒒𝒖𝒆𝒓𝒊𝒅𝒐𝒔 𝒄𝒍𝒊𝒆𝒏𝒕𝒆𝒔. 🚗🔒</p>
                     </div>
                    
                 </div>
@@ -226,7 +223,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/28.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/28(1).jpg" alt="..." /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>siglo-XX</h4>
