--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
+                    <h2 class="section-heading text-uppercase">Portafolio</h2>
                     <h3 class="section-subheading text-muted">Nuestros inicios </h3>
                 </div>
 
